--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,6 @@
             <version>5.1.2</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.20.0</version>
-        </dependency>
-        <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-testng</artifactId>
             <version>5.1.2</version>
@@ -106,8 +101,16 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.3.0</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <!-- <testClassesDirectory>s360UIAutomationCC/src/main/java</testClassesDirectory> -->
+                    <testSourceDirectory>*/src/test/java</testSourceDirectory>
+                    <includes>
+                        <include>**/*UITestRunner.java</include>
+                    </includes>
+                    <!-- <excludes> <exclude>**/*RunCukesTest.java</exclude> </excludes> -->
+                </configuration>
             </plugin>
 
 
