Screenshot functionality added in case of failed tests.

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,15 +1,9 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/SparkReport/Spark.html
-
-screenshot.dir=test-output/
-screenshot.rel.path=./screenshots
-
+extent.reporter.spark.out=test-output/reports/Test Automation.html
 
 extent.reporter.spark.enable.device=true
 extent.reporter.spark.enable.author=true
-
-extent.reporter.spark.prefix.device= MACOS
-extent.reporter.spark.prefix.author= Vishal
+extent.reporter.spark.config=src/test/resources/extent-config.xml
 
 basefolder.name=./ExtentReports/reports
 basefolder.datetimepattern=d-MMM-YY HH-mm-ss
@@ -21,3 +15,11 @@ basefolder.delimiter=_
 
 
 extent.reporter.spark.base64imagesrc=true
+
+screenshot.dir=test-output/
+screenshot.rel.path=../
+
+systeminfo.os=mac
+systeminfo.user=Vishal
+systeminfo.build=1.1
+systeminfo.AppName=Internet Heroku WebApp
