Added physical Screenshots

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,6 +1,14 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=test-output/reports/Test Automation.html
+extent.reporter.spark.out=test-output/SparkReport/Test Automation
 
+extent.reporter.html.start=true
+extent.reporter.html.out=test-output/HtmlReport/Test Automation
+
+extent.reporter.pdf.start=true
+extent.reporter.pdf.out=test-output/PDFReport/Test Automation
+
+screenshot.dir=test-output/Screenshots
+screenshot.rel.path=../Screenshots
 extent.reporter.spark.enable.device=true
 extent.reporter.spark.enable.author=true
 extent.reporter.spark.config=src/test/resources/extent-config.xml
@@ -10,14 +18,15 @@ basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 #default is true
 basefolder.enable.delimiter=true
 
+#extent.reporter.spark.base64imagesrc=true
+
 #default is space. Custom delimiter
 basefolder.delimiter=_
 
 
-extent.reporter.spark.base64imagesrc=true
 
-screenshot.dir=test-output/
-screenshot.rel.path=../
+
+
 
 systeminfo.os=mac
 systeminfo.user=Vishal
